--- a/sigproc.bib
+++ b/sigproc.bib
@@ -23,7 +23,7 @@
   lang =	 {english},
   isbn =	 {},
   url =
-                  {http://www.i3s.unice.fr/\~{}mosser/\_media/research/ecmfa14.pdf},
+                  {http://www.i3s.unice.fr/~mosser/media/research/ecmfa14.pdf},
   sorte =	 {colin}
 }
 
@@ -49,7 +49,6 @@
   booktitle =	 {INTERACT},
   year =	 {1997},
   pages =	 {362-369},
-  crossref =	 {DBLP:conf/interact/1997},
   bibsource =	 {DBLP, http://dblp.uni-trier.de}
 }
 
@@ -65,6 +64,33 @@ pages = {1-6},
 title = {Extensible Global Model Management with Meta-model Subsets and Model Synchronization},
 author = {Dominique Blouin and Yvan Eustache and Jean-Philippe Diguet},
 pages = {43--52},
+  booktitle={GEMOC 2014},
+  year={2014},
 url = {http://ceur-ws.org/Vol-XXX/#paper-07},
-crossref = {GEMOC2014},
+}
+
+@incollection{vallecillo10,
+  title={On the combination of domain specific modeling languages},
+  author={Vallecillo, Antonio},
+  booktitle={Modelling Foundations and Applications},
+  pages={305--320},
+  year={2010},
+  publisher={Springer}
+}
+
+@inproceedings{emerson06,
+  title={Techniques for metamodel composition},
+  author={Emerson, Matthew and Sztipanovits, Janos},
+  booktitle={OOPSLA--6th Workshop on Domain Specific Modeling},
+  pages={123--139},
+  year={2006}
+}
+
+@inproceedings{groenewegen2008webdsl,
+  title={Webdsl: a domain-specific language for dynamic web applications},
+  author={Groenewegen, Danny M and Hemel, Zef and Kats, Lennart CL and Visser, Eelco},
+  booktitle={Companion to the 23rd ACM SIGPLAN conference on Object-oriented programming systems languages and applications},
+  pages={779--780},
+  year={2008},
+  organization={ACM}
 }
